New Classes and Updated